--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+:root{
+  --brown:#c33c12,
+  --dark:#3B4948,
+  --white:#fff,
+}
+
+.brown{
+  color:#c33c12
+}
+.dark{
+  color: #3B4948
+}
+.white{
+  color:#fff;
+}
+.brown-bg{
+  background-color: #c33c12 
+}
+.btn-brown{
+  background-color: #c33c12 !important;
+  color:#fff !important;
+}
+
+.font-10 {
+  font-size: 10px;
+}
+
+.font-12 {
+  font-size: 12px;
+}
+.font-14 {
+  font-size: 14px;
+}
+.font-15 {
+  font-size: 15px;
+}
+.font-16 {
+  font-size: 16px;
+}
+.font-18 {
+  font-size: 18px;
+}
+.font-20 {
+  font-size: 20px;
+}
+.font-22 {
+  font-size: 22px;
+}
+
+.font-24 {
+  font-size: 24px;
+}
+.font-25 {
+  font-size: 25px;
+}
+.font-27 {
+  font-size: 27px;
+}
+.font-30 {
+  font-size: 30px;
+}
+.font-33 {
+  font-size: 33px;
+}
+.font-35 {
+  font-size: 35px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.light {
+  font-weight: 600;
+}
+
